# borechestrator

./: .gitignore  Cargo.toml  Dockerfile.agent  Dockerfile.claude-agent  Dockerfile.controller  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml
crates/boring-agent/: Cargo.toml
crates/boring-agent/src/: git.rs  main.rs  workspace.rs
crates/boring-broker/: Cargo.toml
crates/boring-broker/src/: lib.rs  nats.rs  traits.rs
crates/boring-broker/tests/: integration.rs
crates/boring-cli/: Cargo.toml
crates/boring-cli/src/: main.rs  observability.rs
crates/boring-cli/src/commands/: emit.rs  init.rs  logs.rs  mod.rs  run.rs  status.rs  validate.rs
crates/boring-cli/tests/: cli_integration.rs  e2e.rs
crates/boring-controller/: Cargo.toml
crates/boring-controller/src/: backpressure.rs  checkpoint.rs  event_router.rs  hooks.rs  human.rs  job_builder.rs  lib.rs  memories.rs  metrics.rs  output_parser.rs  reconciler.rs  tasks.rs  test_helpers.rs
crates/boring-proto/: Cargo.toml
crates/boring-proto/src/: config.rs  event.rs  lib.rs  topic.rs
crates/boring-runtime/: Cargo.toml
crates/boring-runtime/src/: docker.rs  k8s.rs  lib.rs  local.rs  traits.rs
crates/boring-secrets/: Cargo.toml
crates/boring-secrets/src/: aws.rs  azure.rs  chain.rs  env.rs  file.rs  k8s.rs  lib.rs  traits.rs
crates/boring-store/: Cargo.toml
crates/boring-store/src/: lib.rs  local.rs  s3.rs  traits.rs
deploy/helm/: values-nats.yaml  values-rustfs.yaml
deploy/helm/borechestrator/: Chart.yaml  values.yaml
deploy/helm/borechestrator/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  rbac.yaml  serviceaccount.yaml
examples/: README.md  codebase-research.yml  contract-first-fullstack.yml  cyclic-qa.yml  issue-to-pr.yml  k8s-claude-test.yml  k8s-contract-first.yml  k8s-cyclic-qa.yml  k8s-echo-test.yml  self-review.yml
scripts/: dev-down.sh  dev-up.sh  k8s-down.sh  k8s-up.sh
