[workspace]
resolver = "2"
members = [
    "crates/boring-proto",
    "crates/boring-broker",
    "crates/boring-store",
    "crates/boring-controller",
    "crates/boring-runtime",
    "crates/boring-agent",
    "crates/boring-cli",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/krlohnes/borechestrator"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Message broker
async-nats = "0.39"

# Object storage
aws-sdk-s3 = "1"
aws-config = "1"

# Kubernetes
kube = { version = "0.99", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["latest"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time + IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# Testing
tempfile = "3"
