[package]
name = "boring-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "boring-agent"
path = "src/main.rs"

[dependencies]
boring-proto = { path = "../boring-proto" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
