[package]
name = "boring-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "boring-agent"
path = "src/main.rs"

[dependencies]
boring-proto = { path = "../boring-proto" }
boring-broker = { path = "../boring-broker" }
boring-store = { path = "../boring-store", features = ["s3"] }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
