[package]
name = "boring-broker"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
boring-proto = { path = "../boring-proto" }
async-trait = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
