[package]
name = "boring-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "boring-cli"
path = "src/main.rs"

[dependencies]
boring-proto = { path = "../boring-proto" }
boring-broker = { path = "../boring-broker" }
boring-store = { path = "../boring-store" }
boring-controller = { path = "../boring-controller" }
boring-runtime = { path = "../boring-runtime", features = ["k8s"] }
boring-secrets = { path = "../boring-secrets" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }

[features]
default = []
otel = ["dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]

[dev-dependencies]
tempfile = { workspace = true }
