[package]
name = "boring-controller"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
boring-proto = { path = "../boring-proto" }
boring-broker = { path = "../boring-broker" }
boring-store = { path = "../boring-store" }
boring-runtime = { path = "../boring-runtime" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true }
