[package]
name = "boring-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# K8s (optional)
kube = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[features]
default = []
k8s = ["dep:kube", "dep:k8s-openapi", "dep:uuid"]

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
