[package]
name = "boring-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
