[package]
name = "boring-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# S3 (optional — needs rustc 1.91+)
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
aws-credential-types = { version = "1", optional = true }

[features]
default = []
s3 = ["dep:aws-sdk-s3", "dep:aws-config", "dep:aws-credential-types"]

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
